# saves

./: .gitignore  .gitlab-ci.yml  0.celeste  0.celeste.html  0.celeste.txt  0.html  0.txt  1.celeste  1.celeste.txt  1.html  1.txt  2.celeste  2.celeste.txt  2.html  2.txt  Cargo.toml  Celeste.desktop  celeste.bash  data  debug.celeste  index.html  info.txt  javascriptProxy.js?targetList:tokens=%2F..%2FREQUEST  old.bash  package.json  saves  send.js  settings.celeste  template.html
.cargo/: config.toml
assets/: 0.json
celeste/: Cargo.toml
celeste/src/: main.rs
celeste/test-data/a/: 1.celeste  settings.celeste
old-1/src/: domutils.rs  lib.rs  save.rs  settings.rs
old-1/test-data/a/: 2.celeste  settings.celeste
src/: celeste_stats.rs  daemon.rs  dirs.rs  domutils.rs  durationutils.rs  elementutils.rs  install.rs  main.rs  old_main.rs  proc.rs  steam_app.rs  stringutils.rs
