[package]
name = "celeste-saves"
version = "0.23.3"
edition = "2021"
publish = false

[dependencies]
minidom = "0.10.0"
itertools = "0.8.0"
derive_more = "0.13.0"
serde = "1.0.84"
serde_derive = "1.0.84"
atty = "0.2"
quick-xml = "0.28.1"
once_cell = "1.17.1"
html-escape = "0.2.13"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
serde_json = "1.0.94"
tracing-appender = "0.2.2"
tap = "1.0.1"
home = "0.5.4"
indexmap = "1.9.2"
eyre = "0.6.8"
procfs = "0.15.1"
bstr = "1.4.0"
fork = "0.1.21"
keyvalues-parser = "0.1.0"
keyvalues-serde = "0.1.0"
smartstring = "1.0.1"
tracing-unwrap = { version = "0.10", default-features = false, features = ["log-location"] }
git2 = { version = "0.16.1", default-features = false } 
markup = "0.13.1"
steamlocate = { version = "1.1.1", features = ["steamid_ng"] }
steamid-ng = "1.0.0"
